--- a/index.html
+++ b/index.html
@@ -1,2 +1,57 @@
-portfolio
-<img src="images/icon.png" alt="icon">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alfred's Portfolio</title>
+    <style>
+        body {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            line-height: 1.6;
+        }
+        .profile-icon {
+            width: 200px;
+            height: auto;
+            border-radius: 50%;
+            margin: 20px 0;
+        }
+        .title {
+            color: #333;
+            margin: 20px 0;
+        }
+        .role {
+            color: #666;
+            font-size: 1.2em;
+            margin: 15px 0;
+        }
+        .certifications {
+            list-style: none;
+            padding: 0;
+        }
+        .certifications li {
+            margin: 10px 0;
+            padding: 10px;
+            background: #f5f5f5;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <main>
+        <img src="images/icon.png" alt="アイコン画像" class="profile-icon">
+        <h1 class="title">Alfred's Portfolio</h1>
+        <p class="role">Web Developer</p>
+        <section>
+            <h2>保有資格</h2>
+            <ul class="certifications">
+                <li>応用情報技術者試験(AP)</li>
+                <li>AWS Solutions Architect – Associate</li>
+                <li>JSTQB Foundation Level</li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
