--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="frame-src 'self' https://www.youtube.com">
     <title>Alfred's Portfolio</title>
     <style>
         body {
@@ -37,6 +38,20 @@
             background: #f5f5f5;
             border-radius: 5px;
         }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9のアスペクト比 */
+            height: 0;
+            overflow: hidden;
+            margin: 20px 0;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
@@ -51,6 +66,25 @@
                 <li>AWS Solutions Architect – Associate</li>
                 <li>JSTQB Foundation Level</li>
             </ul>
+        </section>
+        <section>
+            <h2>趣味</h2>
+            <ul>
+                <li>音楽観賞</li>
+                <li>おすすめのアーティスト: THE ALFEE</li>
+            </ul>
+            <div class="video-container">
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/x1ZWm2fH2uk?si=lonDtZFYhxwsLEoi" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
         </section>
     </main>
 </body>
