--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         <h1 class="title">Alfred's Portfolio</h1>
         <p class="role">Web Developer</p>
         <section>
+            <h2>スキル</h2>
+            <ul class="certifications">
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+        </section>
+        <section>
             <h2>保有資格</h2>
             <ul class="certifications">
                 <li>応用情報技術者試験(AP)</li>
