--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         <section>
             <h2>作品集</h2>
         </section>
+        <section>
+            <h2>技術ブログ</h2>
+        </section>
     </main>
 </body>
 </html>
