--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
         <section>
             <h2>技術ブログ</h2>
         </section>
+        <section>
+            <ul>
+            <h2>今後伸ばしたいスキル</h2>
+                <li>Webデザイン</li>
+                <li>事業設計</li>
+                <li>語学</li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
