--- a/index.html
+++ b/index.html
@@ -5,109 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="frame-src 'self' https://www.youtube.com">
     <title>Alfred's Portfolio</title>
-    <style>
-        body {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            line-height: 1.6;
-        }
-        .profile-icon {
-            width: 200px;
-            height: auto;
-            border-radius: 50%;
-            margin: 20px 0;
-        }
-        .title {
-            color: #333;
-            margin: 20px 0;
-        }
-        .role {
-            color: #666;
-            font-size: 1.2em;
-            margin: 15px 0;
-        }
-        .certifications {
-            list-style: none;
-            padding: 0;
-        }
-        .certifications li {
-            margin: 10px 0;
-            padding: 10px;
-            background: #f5f5f5;
-            border-radius: 5px;
-        }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9のアスペクト比 */
-            height: 0;
-            overflow: hidden;
-            margin: 20px 0;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <script>
+        /* Tailwind CDN config: カスタムカラーを1つ追加 */
+        tailwind = { config: { theme: { extend: { colors: { primary: '#0ea5a4' } } } } };
+    </script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <main>
-        <img src="images/icon.png" alt="アイコン画像" class="profile-icon">
-        <h1 class="title">Alfred's Portfolio</h1>
-        <p class="role">Web Developer</p>
-        <section>
-            <h2>スキル</h2>
-            <ul class="certifications">
-                <li>HTML</li>
-                <li>CSS</li>
-            </ul>
-        </section>
-        <section>
-            <h2>保有資格</h2>
-            <ul class="certifications">
-                <li>応用情報技術者試験(AP)</li>
-                <li>AWS Solutions Architect – Associate</li>
-                <li>JSTQB Foundation Level</li>
-            </ul>
-        </section>
-        <section>
-            <h2>趣味</h2>
-            <ul>
-                <li>音楽観賞</li>
-                <li>おすすめのアーティスト: THE ALFEE</li>
-            </ul>
-            <div class="video-container">
-                <iframe 
-                    width="560" 
-                    height="315" 
-                    src="https://www.youtube.com/embed/x1ZWm2fH2uk?si=lonDtZFYhxwsLEoi" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" 
-                    allowfullscreen>
-                </iframe>
-            </div>
-        </section>
-        <section>
-            <h2>作品集</h2>
-        </section>
-        <section>
-            <h2>技術ブログ</h2>
-        </section>
-        <section>
-            <h2>今後伸ばしたいスキル</h2>
-            <ul>
-                <li>Webデザイン</li>
-                <li>事業設計</li>
-                <li>語学</li>
-                <li>作曲</li>
-            </ul>
-        </section>
+    <main class="min-h-screen bg-gray-50 py-8 px-4">
+        <div class="max-w-3xl mx-auto bg-white shadow-md rounded-lg p-6">
+            <img src="images/icon.png" alt="アイコン画像" class="w-40 h-40 rounded-full mx-auto shadow-md object-cover">
+            <h1 class="text-3xl font-bold text-center text-gray-800 mt-4">Alfred's Portfolio</h1>
+            <p class="text-center text-gray-500 text-lg mt-2">Web Developer</p>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">スキル</h2>
+                <ul class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+                    <li class="bg-gray-100 rounded-md p-3 text-gray-700">HTML</li>
+                    <li class="bg-gray-100 rounded-md p-3 text-gray-700">CSS</li>
+                </ul>
+            </section>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">保有資格</h2>
+                <ul class="space-y-3">
+                    <li class="bg-gray-50 border border-gray-100 rounded-md p-3">応用情報技術者試験(AP)</li>
+                    <li class="bg-gray-50 border border-gray-100 rounded-md p-3">AWS Solutions Architect – Associate</li>
+                    <li class="bg-gray-50 border border-gray-100 rounded-md p-3">JSTQB Foundation Level</li>
+                </ul>
+            </section>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">趣味</h2>
+                <ul class="list-disc list-inside text-gray-700">
+                    <li>音楽観賞</li>
+                    <li>おすすめのアーティスト: THE ALFEE</li>
+                </ul>
+                <div class="relative pb-[56.25%] h-0 overflow-hidden mt-4 rounded-md">
+                    <iframe 
+                        class="absolute inset-0 w-full h-full"
+                        src="https://www.youtube.com/embed/x1ZWm2fH2uk?si=lonDtZFYhxwsLEoi" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </section>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">作品集</h2>
+                <p class="text-gray-600">ここにプロジェクトのサムネイルやリンクを追加できます。</p>
+            </section>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">技術ブログ</h2>
+                <p class="text-gray-600">技術記事や学びのログを載せる予定です。</p>
+            </section>
+
+            <section class="mt-6">
+                <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">今後伸ばしたいスキル</h2>
+                <ul class="list-disc list-inside text-gray-700">
+                    <li>Webデザイン</li>
+                    <li>事業設計</li>
+                    <li>語学</li>
+                    <li>作曲</li>
+                </ul>
+            </section>
+        </div>
     </main>
 </body>
 </html>
